--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.56.3",
     "react-router-dom": "^7.5.0",
     "tailwind-merge": "^3.2.0",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.4",
     "zustand": "^5.0.3"
