--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@vitejs/plugin-react-swc": "^3.8.0",
     "@vitest/browser": "^3.1.4",
     "@vitest/coverage-v8": "^3.1.4",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^18.0.0",
@@ -67,6 +68,7 @@
     "jsdom": "^26.1.0",
     "msw": "^2.8.2",
     "playwright": "^1.52.0",
+    "postcss": "^8.5.6",
     "prettier": "^3.5.3",
     "storybook": "^8.6.14",
     "tailwindcss": "^3.4.17",
